[tool.poetry]
name = "mpe_arper"
version = "0.1.0"
description = ""
authors = ["LasseMay <lasse.maywald@web.de>"]

[tool.poetry.dependencies]
python = "^3.9"
rtmidi = "^2.3.4"
python-rtmidi = "^1.4.9"
pylint = "^2.15.7"
python-lsp-server = "^1.6.0"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
